<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_title">Crime Title</string>
    <string name="crime_date">Crime Date</string>
    <string name="update_time_label">Update Time</string>
    <string name="new_crime">New Crime</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="crime_suspect_text">Select Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>

    <string name="crime_report">%1$s!
      The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_photo_full_size">Full Size</string>
    <string name="latitude_label">LAT: %1$s</string>
    <string name="longitude_label">LONG: %1$s</string>
    <string name="latitude_title">LAT</string>
    <string name="longitude_title">LONG</string>
    <string name="a_picture_of_the_subject">A picture of the subject</string>
    <string name="camera_button">camera button</string>
    <string name="update_gps_button">Update GPS</string>
    <string name="show_map_button">Show Map</string>


</resources>